--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -174,8 +174,6 @@
     </div>
   </section>
   <div class="FooterContainer">
-    <div class="Docs__note--footer-typo">
-      <p>Spotted a typo? Something missing? Please <a href="https://github.com/buildkite/docs/issues" class="Link--on-white">open an issue</a> or <a href="<%= open_source_url %>" class="Link--on-white">contribute an update</a>.</p>
-    </div>
+    <%= render "layouts/footer" %>
   </div>
 </div>
