💄 Add support links to footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,14 @@
-<div class="Docs__note--footer-typo">
-  <p>Spotted a typo? Something missing? Please <a href="https://github.com/buildkite/docs/issues">open an issue</a> or <a href="<%= open_source_url %>">contribute an update</a>.</p>
-</div>
+<footer class="footer">
+  <div>
+    <div class="footer__heading">Question or feedback</div>
+    <p>Spotted a typo? Something missing?</p>
+    <p>Please <a href="https://github.com/buildkite/docs/issues">open an issue</a> or <a href="<%= open_source_url %>">contribute an update</a>.</p>
+  </div>
+  <div>
+    <div class="footer__heading">Get help</div>
+    <ul>
+      <li>Join the <a href="https://chat.buildkite.community/">community Slack channel</a></li>
+      <li><a href="mailto:support@buildkite.com">Email support</a></li>
+    </ul>
+  </div>
+</footer>
