--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -173,7 +173,7 @@
       </div>
     </div>
   </section>
-  <div class="FooterContainer">
+  <div class="HomepageFooter">
     <%= render "layouts/footer" %>
   </div>
 </div>
