--- a/app/assets/stylesheets/public/_variables.scss
+++ b/app/assets/stylesheets/public/_variables.scss
@@ -4,3 +4,4 @@ $text-on-dark-very-subdued-opacity: .7;
 $color-brand-green: rgb(2, 129, 76);
 $transition-speed: 300ms;
 $screen-sm: 768px;
+$screen-md: 960px;
